<resources>
    <string name="app_name">Amader Doctor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_reminder">Reminder</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_fail">Register Fail</string>
    <string name="fingerprint_authenticate_fail">Authentication Fail</string>
    <string name="fingerprint_authenticate_success">Authentication Success</string>
    <string name="register_success">Register Success</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forgot_password">Forgot Password !!</string>
    <string name="SignIn_Option">-------------------------  Or Sign In  ---------------------------</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_logout">Logout</string>




    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="add_item">Add New Item</string>
</resources>
